--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,51 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{sharma2012first,
+  title={First-passage time: Lattice versus continuum},
+  author={Sharma, Kamal and Kumar, N},
+  journal={Physical Review E},
+  volume={86},
+  number={3},
+  pages={032104},
+  year={2012},
+  publisher={APS}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@phdthesis{sharma2019transport,
+  title={Transport in low-dimensional interacting systems},
+  author={Sharma, Kamal},
+  year={2019},
+  school={Georgia Institute of Technology}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+@inproceedings{sharma2021violation,
+  title={Violation of Wiedemann-Franz law in strongly interacting one-dimensional electrons},
+  author={Sharma, Kamal},
+  booktitle={APS March Meeting Abstracts},
+  volume={2021},
+  pages={A44--007},
+  year={2021}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@inproceedings{sharma2021detailed,
+  title={A detailed Sensitivity Analysis of the Human Ventricular Cell Model in one-dimensional and two-dimensional tissue using GPU computing.},
+  author={Sharma, Kamal and Kaboudian, Abouzar and Fenton, Flavio and Cherry, Elizabeth},
+  booktitle={APS March Meeting Abstracts},
+  volume={2021},
+  pages={H71--223},
+  year={2021}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{bradley2023one,
+  title={A One-Dimensional Electron System Coupled to Light},
+  author={Bradley, Victor and Sharma, Kamal and DeGottardi, Wade and Hafezi, Mohammad},
+  journal={Bulletin of the American Physical Society},
+  year={2023},
+  publisher={American Physical Society}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@article{sharma2023probing,
+  title={Probing Many-Body Correlations in Superconducting Circuits},
+  author={Sharma, Kamal and DeGottardi, Wade},
+  journal={Bulletin of the American Physical Society},
+  year={2023},
+  publisher={APS}
 }
