Removed extraneous info like projects page. Slowly build up.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,8 @@
+---
+---
+
+@string{aps = {American Physical Society,}}
+
 @article{sharma2012first,
   title={First-passage time: Lattice versus continuum},
   author={Sharma, Kamal and Kumar, N},
@@ -6,14 +11,16 @@
   number={3},
   pages={032104},
   year={2012},
-  publisher={APS}
+  publisher={APS},
+  selected={true}
 }
 
 @phdthesis{sharma2019transport,
   title={Transport in low-dimensional interacting systems},
   author={Sharma, Kamal},
   year={2019},
-  school={Georgia Institute of Technology}
+  school={Georgia Institute of Technology},
+  selected={true}
 }
 
 @inproceedings{sharma2021violation,
@@ -22,7 +29,8 @@
   booktitle={APS March Meeting Abstracts},
   volume={2021},
   pages={A44--007},
-  year={2021}
+  year={2021},
+  selected={true}
 }
 
 @inproceedings{sharma2021detailed,
@@ -31,7 +39,8 @@
   booktitle={APS March Meeting Abstracts},
   volume={2021},
   pages={H71--223},
-  year={2021}
+  year={2021},
+  selected={true}
 }
 
 @article{bradley2023one,
@@ -39,7 +48,8 @@
   author={Bradley, Victor and Sharma, Kamal and DeGottardi, Wade and Hafezi, Mohammad},
   journal={Bulletin of the American Physical Society},
   year={2023},
-  publisher={American Physical Society}
+  publisher={American Physical Society},
+  selected={true}
 }
 
 @article{sharma2023probing,
@@ -47,5 +57,6 @@
   author={Sharma, Kamal and DeGottardi, Wade},
   journal={Bulletin of the American Physical Society},
   year={2023},
-  publisher={APS}
+  publisher={APS},
+  selected={true}
 }
