Updated with latest preprints sc-circuits and light-matter coupling.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,43 +3,11 @@
 
 @string{aps = {American Physical Society,}}
 
-@article{sharma2012first,
-  title={First-passage time: Lattice versus continuum},
-  author={Sharma, Kamal and Kumar, N},
-  journal={Physical Review E},
-  volume={86},
-  number={3},
-  pages={032104},
-  year={2012},
-  publisher={APS},
-  selected={true}
-}
-
-@phdthesis{sharma2019transport,
-  title={Transport in low-dimensional interacting systems},
-  author={Sharma, Kamal},
-  year={2019},
-  school={Georgia Institute of Technology},
-  selected={true}
-}
-
-@inproceedings{sharma2021violation,
-  title={Violation of Wiedemann-Franz law in strongly interacting one-dimensional electrons},
-  author={Sharma, Kamal},
-  booktitle={APS March Meeting Abstracts},
-  volume={2021},
-  pages={A44--007},
-  year={2021},
-  selected={true}
-}
-
-@inproceedings{sharma2021detailed,
-  title={A detailed Sensitivity Analysis of the Human Ventricular Cell Model in one-dimensional and two-dimensional tissue using GPU computing.},
-  author={Sharma, Kamal and Kaboudian, Abouzar and Fenton, Flavio and Cherry, Elizabeth},
-  booktitle={APS March Meeting Abstracts},
-  volume={2021},
-  pages={H71--223},
-  year={2021},
+@article{sharma2024measurement,
+  title={Measurement of Many-Body Quantum Correlations in Superconducting Circuits},
+  author={Sharma, Kamal and DeGottardi, Wade},
+  journal={arXiv preprint arXiv:2406.12939},
+  year={2024},
   selected={true}
 }
 
@@ -57,6 +25,47 @@
   author={Sharma, Kamal and DeGottardi, Wade},
   journal={Bulletin of the American Physical Society},
   year={2023},
+  publisher={APS},
+  selected={true}
+}
+
+@inproceedings{sharma2021detailed,
+  title={A detailed Sensitivity Analysis of the Human Ventricular Cell Model in one-dimensional and two-dimensional tissue using GPU computing.},
+  author={Sharma, Kamal and Kaboudian, Abouzar and Fenton, Flavio and Cherry, Elizabeth},
+  booktitle={APS March Meeting Abstracts},
+  volume={2021},
+  pages={H71--223},
+  year={2021},
+  selected={true}
+}
+
+@inproceedings{sharma2021violation,
+  title={Violation of Wiedemann-Franz law in strongly interacting one-dimensional electrons},
+  author={Sharma, Kamal},
+  booktitle={APS March Meeting Abstracts},
+  volume={2021},
+  pages={A44--007},
+  year={2021},
+  selected={true}
+}
+
+@phdthesis{sharma2019transport,
+  title={Transport in low-dimensional interacting systems},
+  author={Sharma, Kamal},
+  year={2019},
+  school={Georgia Institute of Technology},
+  selected={true}
+}
+
+
+@article{sharma2012first,
+  title={First-passage time: Lattice versus continuum},
+  author={Sharma, Kamal and Kumar, N},
+  journal={Physical Review E},
+  volume={86},
+  number={3},
+  pages={032104},
+  year={2012},
   publisher={APS},
   selected={true}
 }
